--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -20,7 +20,8 @@
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
     "passport-naver": "^1.0.6",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "webpack": "^5.94.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.5"
